Added copyright, footer and HR to index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Mr First Webpage</title>
 </head>
 <body>
+
     <h1>Rory's First Webpage</h1>
+    <h6>Rory's First Webpage</h6>
     <p>This is a webpage that I made while attending the fantastic QA MEA for Leaders course</p>
+    <hr>
+
+    <footer>
+        <p>&copy; Rory 2024</p>
+    </footer>
+
 </body>
 </html>
