Added pointless but fun emojis to index.html

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <h1>Rory's First Webpage</h1>
     <h6>Rory's First Webpage</h6>
-    <p>This is a webpage that I made while attending the fantastic QA MEA for Leaders course</p>
+    <p>This is a webpage that I made while attending the fantastic QA MEA for Leaders course. &#128187; &#128172;</p>
     <hr>
 
     <footer>
-        <p>&copy; Rory 2024</p>
+        <p>&copy; Rory 2024 &#128526</p>
     </footer>
 
 </body>
