H2 magenta, H3 maroon, li green

--- a/bart.html
+++ b/bart.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     <h2>Bart's Webpage</h2>
+
+    <h3>Bart's Favourite Things:</h3>
+    <ul>
+        <li>Skateboarding</li>
+        <li>Bunking off school</li>
+        <li>Prank calls</li>
+    </ul>
 </body>
 </html>
