Tuesday intro added to index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1>Rory's First Webpage</h1>
     <h6>Rory's First Webpage</h6>
     <p>This is a webpage that I made while attending the fantastic QA MEA for Leaders course. &#128187; &#128172;</p>
+
+    <p>Day One was very interesting and I'm looking forward to sharing all I learned with the wider world via GitHub today!</p>
     <hr>
 
     <footer>
